sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: illegal start of simple expression
	if ([i] > [i-1]) {
            ^AlgGnomeSort:15: error: ')' expected but '}' found.
}
^