sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code

def gnomeSort() {
var i: Int= 1
while (i< getNombreValeurs() ) {
	if ([i] > [i-1]) {
		i = i+1
	} 
	else {
		echange ([i],[i-1])
		if (i>1) {
			i=i-1
		}
	}
}
}
